java: fix ancient newInstance() calls
Deprecated in new jdks.

https://gitlab.ilscipio.com/scipio-dev/dev/scipioce-dev/-/issues/1022