@@ -103,7 +103,7 @@ public class RmiServiceContainer implements Container {
         if (clientProp != null && UtilValidate.isNotEmpty(clientProp.value)) {
             try {
                 Class<?> c = loader.loadClass(clientProp.value);
-                csf = (RMIClientSocketFactory) c.newInstance();
+                csf = (RMIClientSocketFactory) c.getConstructor().newInstance();
             } catch (Exception e) {
                 throw new ContainerException(e);
             }
@@ -111,7 +111,7 @@ public class RmiServiceContainer implements Container {
         if (serverProp != null && UtilValidate.isNotEmpty(serverProp.value)) {
             try {
                 Class<?> c = loader.loadClass(serverProp.value);
-                ssf = (RMIServerSocketFactory) c.newInstance();
+                ssf = (RMIServerSocketFactory) c.getConstructor().newInstance();
             } catch (Exception e) {
                 throw new ContainerException(e);
             }
