@@ -20,6 +20,8 @@ package org.ofbiz.widget.content;
 
 import org.ofbiz.base.util.Debug;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * WidgetContentWorker Class
  */
@@ -31,12 +33,8 @@ public final class WidgetDataResourceWorker {
         try {
             ClassLoader loader = Thread.currentThread().getContextClassLoader();
             // note: loadClass is necessary for these since this class doesn't know anything about them at compile time
-            dataresourceWorker = (DataResourceWorkerInterface) loader.loadClass("org.ofbiz.content.data.DataResourceWorker").newInstance();
-        } catch (ClassNotFoundException e) {
-            Debug.logError(e, "Could not pre-initialize dynamically loaded class: ", module);
-        } catch (IllegalAccessException e) {
-            Debug.logError(e, "Could not pre-initialize dynamically loaded class: ", module);
-        } catch (InstantiationException e) {
+            dataresourceWorker = (DataResourceWorkerInterface) loader.loadClass("org.ofbiz.content.data.DataResourceWorker").getConstructor().newInstance();
+        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
             Debug.logError(e, "Could not pre-initialize dynamically loaded class: ", module);
         }
     }
